WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60823
NPP_URLNotify is not called if a URL passed to NPN_GetURLNotify fails to load
https://bugs.webkit.org/show_bug.cgi?id=60823
Summary
NPP_URLNotify is not called if a URL passed to NPN_GetURLNotify fails to load
Anders Carlsson
Reported
2011-05-13 17:23:41 PDT
NPP_URLNotify is not called if a URL passed to NPN_GetURLNotify fails to load
Attachments
Patch
(15.46 KB, patch)
2011-05-13 17:28 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(16.13 KB, patch)
2011-05-14 09:27 PDT
,
Anders Carlsson
kdecker
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-13 17:28:17 PDT
Created
attachment 93538
[details]
Patch
Anders Carlsson
Comment 2
2011-05-13 18:05:18 PDT
Committed
r86476
: <
http://trac.webkit.org/changeset/86476
>
Csaba Osztrogonác
Comment 3
2011-05-14 00:26:05 PDT
Reopen, because it was rolled out by
http://trac.webkit.org/changeset/86481
Anders Carlsson
Comment 4
2011-05-14 09:27:19 PDT
Created
attachment 93554
[details]
Patch
Anders Carlsson
Comment 5
2011-05-14 09:31:17 PDT
Committed
r86487
: <
http://trac.webkit.org/changeset/86487
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug